--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,8 @@ layout: default
       {%- include home-item.html post=post -%}
       {%- endfor -%}
     </ul>
-
+  
+    <p><a href="mailto:dev.cosmicstar98@protonmail.com" target="_blank" alt="Contact me on Proton Mail." title="Contact me on Proton Mail.">Contact me on Proton Mail</a></p>
     <br>
   {%- endif -%}
 
