--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,8 +28,10 @@ layout: default
       {%- include home-item.html post=post -%}
       {%- endfor -%}
     </ul>
-  
-    <p><a href="mailto:dev.cosmicstar98@protonmail.com" target="_blank" alt="Contact me on Proton Mail." title="Contact me on Proton Mail.">Contact me on Proton Mail</a></p>
+
+    <p>contact me <a href="mailto:dev.cosmicstar98@protonmail.com" target="_blank" alt="Contact me on ProtonMail." title="Contact me on ProtonMail.">on ProtonMail</a></p>
+    <br>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
     <br>
   {%- endif -%}
 
