--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,9 +29,8 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <p>contact me <a href="mailto:dev.cosmicstar98@protonmail.com" target="_blank" alt="Contact me on ProtonMail." title="Contact me on ProtonMail.">on ProtonMail</a></p>
-    <br>
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    <p>contact me <a href="mailto:dev.cosmicstar98@protonmail.com" target="_blank" alt="Contact me on ProtonMail." title="Contact me on ProtonMail.">on ProtonMail</a>.</p>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}" alt="Subscribe via RSS." title="Subscribe via RSS.">via RSS</a>.</p>
     <br>
   {%- endif -%}
 
